--- a/templates/main.cf.j2
+++ b/templates/main.cf.j2
@@ -32,7 +32,7 @@ myhostname = {{ postfix_send_only_hostname }}
 alias_maps = hash:/etc/aliases
 alias_database = hash:/etc/aliases
 myorigin = /etc/mailname
-mydestination = {{ postfix_send_only_hostname }}, localhost.{{ postfix_send_only_hostname }}, , localhost
+mydestination = {{ postfix_send_only_hostname }}, localhost.{{ postfix_send_only_hostname }}, localhost
 relayhost =
 mynetworks = 127.0.0.0/8 [::ffff:127.0.0.0]/104 [::1]/128
 mailbox_size_limit = 0
